backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend
  labels:
    app: backend
    maintainer: vikas
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: backend-pod
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend-pod
    spec:
      containers:
        - name: backend-pod
          image: vikasprince/MERN-Backend:v1  # Default stable image version
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      resources:
        limits:
          memory: "1Gi"
          cpu: "1"
        requests:
          memory: "500Mi"
          cpu: "0.5m"
      livenessProbe:
        httpGet:
          path: "/health"
          port: 8080
        initialDelaySeconds: 30
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: "/health"
          port: 8080
        initialDelaySeconds: 60
        periodSeconds: 5
