backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: backend-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
